# distributed-computing-project

./: .gitignore  AGENTS.md  CODE_OVERVIEW.md  README.md  analyze_run.py  clocksim.py  code.py  pyproject.toml  run_experiments.py
clocksim/: __init__.py  cli.py  clocks.py  config.py  context.py  itc.py  metrics.py  shared_metadata.py  sim.py  store.py
configs/: adaptive_lease_advantage.yaml  analyze.yaml  client_actor_clock_study.yaml  dvv_sibling_fanout_study.yaml  extreme_hotspot_churn.yaml  extreme_sparse_replication.yaml  final_study.yaml  full_experiment.yaml  itc_extreme_dynamic_clients.yaml  membership_lease_study.yaml  sensitivity_client_count_32.yaml  sensitivity_client_count_512.yaml  sensitivity_rf3.yaml  sensitivity_rf5.yaml  simulate.yaml
docs/: DC Project Proposal.md  assumptions_and_questions.md  clock_study_design.md  deep-research-report.md  latest_experiment_summary.md  paper_plan.md  report_draft.md  report_draft.tex  results_workflow.md  simulator_capabilities.md  simulator_evolution.md  simulator_methodology.md
docs/report/: final_report_oracle.md  midterm_progress.md  proposal.md
scripts/: organize_experiment.py  reproduce_extremes.sh  reproduce_final.sh  reproduce_paper_all.sh  reproduce_report_5page.sh  reproduce_sensitivity.sh  run_dvv_advantage_experiment.py  run_extreme_fanout_writer_sweep.py  summarize_sensitivity.py
tests/: test_clock_models.py  test_clock_semantics.py  test_context_semantics.py  test_itc.py  test_key_distribution.py  test_metrics_semantics.py  test_per_object_semantics.py  test_scenario_smoke.py  test_shared_metadata.py  test_stamp_semantics.py
