[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-computing-project"
version = "0.1.0"
description = "Simulation framework for studying causal consistency under membership churn."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pallavi Desai" },
  { name = "Eric Nelson" },
]
dependencies = [
  "matplotlib>=3.8,<4",
]

[project.scripts]
simulate-churn = "code:main"
analyze-churn-run = "analyze_run:main"

[tool.setuptools]
py-modules = ["code", "analyze_run"]
