[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-computing-project"
version = "0.1.0"
description = "Simulation framework for studying causal consistency under membership churn."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pallavi Desai" },
  { name = "Eric Nelson" },
]
dependencies = [
  "configargparse>=1.7,<2",
  "matplotlib>=3.8,<4",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
simulate-churn = "code:main"
analyze-churn-run = "analyze_run:main"
run-churn-experiments = "run_experiments:main"

[tool.setuptools]
py-modules = ["code", "clocksim", "analyze_run", "run_experiments"]
